--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
+				<a href="https://www.linkedin.com/in/nathan-hodges-6b3694a7/" class="nav-item">
+					<span class="icon">
+						<i class="fa fa-LinkedIn"></i>
+					</span>
+				</a>
 				<a href="http://github.com/helfi92" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
