--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="nav-left">
 				<a href="https://www.linkedin.com/in/nathan-hodges-6b3694a7/" class="nav-item">
 					<span class="icon">
-						<i class="fa fa-LinkedIn"></i>
+						<i class="fab fa-linkedin-in"></i>
 					</span>
 				</a>
 				<a href="http://github.com/helfi92" class="nav-item">
