--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
 							</article>
 						</div>
 					</div>
+					<!-- Project 3 -->
+					<div class="column">
+						<div class="box project-text">
+							<article>
+								<div>
+									<figure class="image project-figure">
+										<img src="assets/img/project-1.jpg" alt="Image">
+									</figure>
+								</div>
+								<div>			
+									<a href="project.html">Unit Four: Graphics</a>
+								</div>
+							</article>
+						</div>
+					</div>
 				</div>
 			</div>
 		</section>	
