--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<i class="fa fa-linkedin-square"></i>
 					</span>
 				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				<a href="https://github.com/NathanHodges" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
