--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
 									</figure>
 								</div>
 								<div>			
-									<p>
-										This is the paragraph for project two.
-									</p>
+									<a href="RandomPasswordGenerator.html">Random Password Generator.</a>
 								</div>
 							</article>
 						</div>
