--- a/RandomPasswordGenerator.html
+++ b/RandomPasswordGenerator.html
@@ -11776,7 +11776,7 @@ div#notebook {
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Creating-a-CSV-File-of-Passwords">Creating a CSV File of Passwords<a class="anchor-link" href="#Creating-a-CSV-File-of-Passwords">&#182;</a></h1><p>What follows is not a particularly secure method for creating and saving strong passwords, but it was a fun exercise in creating, reading and writing files. The file created by this code can be zipped and locked by password increasing the security in case anyone were to snoop through your files. Also the passwords created are not exactly random, but with some more effort they could be. It was inspired by LastPass a trusted browser application that can generate and save passwords.</p>
-<p><img src="LastPass.png" width="500" height="600"></p>
+<p><img src="assets/img/LastPass.png" width="500" height="600"></p>
 
 </div>
 </div>
