--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					This is my introduction section.	
+					Current senior graduating in the fall of 2018 from the University of North Carolina at Asheville. Most of my experience is in education. I worked as a peer facilitator or peer tutor for three years with the physics department. I have experience in leadership roles from my time as president of my universities Society of Physics Students and training new employees at Eaton. 	
 				</p>
 			</div>
 		</section>
