--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-2.jpg" alt="Image">
+										<img src="assets/img/LastPass.png" alt="Image">
 									</figure>
 								</div>
 								<div>			
