--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div>			
 									<a href="RandomPasswordGenerator.html">Random Password Generator.</a>
 									<p>
-										This file shows how to read and write csv files.
+										This file shows how to read and write csv files using python.
 									</p>
 								</div>
 							</article>
