--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 								</div>
 								<div>			
 									<a href="SpeakHalf.html">Speak Half Jupyter File.</a>
+									<p>
+										This file explores the convergence of a recursively degined sequence similar to the fibonacci sequence.
+									</p>
 								</div>
 							</article>
 						</div>
