--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									</figure>
 								</div>
 								<div>			
-									<a href="SpeakHalf.html">Speak Half Jupyter File.</a>
+									<a href="SpeakHalf.html">Speak Half</a>
 									<p>
 										This file explores the convergence of a recursively degined sequence similar to the fibonacci sequence.
 									</p>
