--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									</figure>
 								</div>
 								<div>			
-									<a href="RandomPasswordGenerator.html">Random Password Generator.</a>
+									<a href="RandomPasswordGenerator.html">Random Password Generator</a>
 									<p>
 										This file shows how to read and write csv files using python.
 									</p>
