--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 				<span></span>
 				<span></span>
 			</span>
+			<p>
+				This is in the nav section.
+			</p>
 		</nav>
 				
 		<!-- About Me -->
