--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profilePic.jpg">
+				<img class="avatar" src="assets/img/ProfileImage.jpg">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
