--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Current senior graduating in December of 2018 from the University of North Carolina at Asheville.
+					I am a senior graduating in December of 2018 from the University of North Carolina at Asheville.
 					Most of my experience is in education.
 					I worked as a peer facilitator and peer tutor for three years with the physics department.
-					I have experience in leadership roles from my time as president of my universities Society of Physics Students and training new employees at Eaton.
+					However, my first tutoring job was with the AVID program at Asheville High School during my freshman year. 
+					During the summer of 2018 I worked for a small company called Soomo Learning that made online textbooks. 
+					The textbooks included interactive maps, which I helped create by aggregating and organizing data sheets for the software engineers.
+					I also began a project to offer design changes to the instructor side analytics dashboard. 
 				</p>
 			</div>
 		</section>
