--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					I am a senior graduating in December of 2018 from the University of North Carolina at Asheville.
-					Most of my experience is in education.
-					I worked as a peer facilitator and peer tutor for three years with the physics department.
-					However, my first tutoring job was with the AVID program at Asheville High School during my freshman year. 
-					During the summer of 2018 I worked for a small company called Soomo Learning that made online textbooks. 
-					The textbooks included interactive maps, which I helped create by aggregating and organizing data sheets for the software engineers.
-					I also began a project to offer design changes to the instructor side analytics dashboard. 
+					Hello all and welcome to my site! Here you will find my favorite projects, I do my best to edit them to be
+					readable for everyone, but sometimes I leave out things. If you ever have any questions about any of my work 
+					feel free to shoot me an email, which you can find on my resume in the top right corner. You can also find
+					other useful links on this site including a link to my freelancer profile on Upwork! There you can see some 
+					of the work I have accomplished so far. So far I've really enjoyed working with folks in the trading business,
+					it's not a particular skill I was trained in at college, but I'm slowing picking it up and it's a lot of fun!
 				</p>
 			</div>
 		</section>
