--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
+				
+				<a href="https://www.upwork.com/freelancers/~01e5d9d217b2c06f6e">
+					<span class = "icon">
+						<i class="fa fa-upwork"></i>
+					</span>
+				</a>
 			</div>
 
 			<div class="nav-right nav-menu">
