--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					</span>
 				</a>
 				
-				<a href="https://www.upwork.com/freelancers/~01e5d9d217b2c06f6e">
+				<a href="https://www.upwork.com/freelancers/~01e5d9d217b2c06f6e" class="nav-item">
 					<span class = "icon">
 						<i class="fa fa-upwork"></i>
 					</span>
