--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				
 				<a href="https://www.upwork.com/freelancers/~01e5d9d217b2c06f6e" class="nav-item">
 					<span class = "icon">
-						<i class="assets/img/upwork.png"></i>
+						<i src="assets/img/upwork.png"></i>
 					</span>
 				</a>
 			</div>
