--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
 					</span>
 				</a>
 				
-				<a href="https://www.upwork.com/freelancers/~01e5d9d217b2c06f6e" class="nav-item">
-					<span class = "icon">
-						<i src="assets/img/upwork.png"></i>
-					</span>
-				</a>
+				<a href="https://www.upwork.com/freelancers/~01e5d9d217b2c06f6e" class="nav-item">Upwork</a>
 			</div>
 
 			<div class="nav-right nav-menu">
