--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Hello all and welcome to my site! Here you will find my favorite projects, I do my best to edit them to be
-					readable for everyone, but sometimes I leave out things. If you ever have any questions about any of my work 
-					feel free to shoot me an email, which you can find on my resume in the top right corner. You can also find
-					other useful links on this site including a link to my freelancer profile on Upwork! There you can see some 
-					of the work I have accomplished so far. So far I've really enjoyed working with folks in the trading business,
-					it's not a particular skill I was trained in at college, but I'm slowing picking it up and it's a lot of fun!
+					Hello all and welcome to my site! Here you will find my favorite projects, I do my best to edit them to not
+					only be understood but also to help others learn to code, because I could not have done any of this without
+					all of the help online! If you ever have any questions about any of my work feel free to shoot me an email,
+					which you can find on my resume in the top right corner. You can also find other useful links on this site 
+					including a link to my freelancer profile on Upwork! There you can see some of the work I have accomplished
+					so far. So far I've really enjoyed working with folks in the trading business,it's not a particular skill I 
+					was trained in at college, but I'm slowing picking it up and it's a lot of fun!
 				</p>
 			</div>
 		</section>
