--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								</div>
 							</article>
 						</div>
-						<!-- Project 1 -->
+						<!-- Project 3 -->
 						<div class="column">
 							<div class="box project-text">
 								<article>
@@ -127,6 +127,24 @@
 									</div>
 								</article>
 							</div>
+							<!-- Project 4 -->
+							<div class="column">
+								<div class="box project-text">
+									<article>
+										<div>
+											<figure class="image project-figure">
+												<img src="assets/img/SensorLabImage.png" alt="Image">
+											</figure>
+										</div>
+										<div>
+											<a href="StatisticsAndSeaborn.html">Sensor Lab Data</a>
+											<p>
+											Using an android app to gather gps data from a phone. Sensor's also include light levels, magnetic field strength and sound which could be used for various other projects.
+											</p>
+										</div>
+								</article>
+							</div>
+						</div>
 						</div>
 					</div>
 				</div>
