--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/SensorLabImage.png" alt="Image">
+										<img src="assets/img/StatisticsAndSeaborn.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>
