--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/StatisticsAndSeaborn.jpg" alt="Image">
+									<img src="assets/img/StatisticsAndSeaborn.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>
-									<a href="StatisticsAndSeaborn.html">Sensor Lab Data</a>
+									<a href="StatisticsAndSeaborn.html">Statistics and Using Seaborn</a>
 									<p>
-									Using an android app to gather gps data from a phone. Sensor's also include light levels, magnetic field strength and sound which could be used for various other projects.
+									Analyzing real estate data using scipy, sklearn and seaborn for visulaizing data.
 									</p>
 								</div>
 							</article>
