--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<a class="nav-item" href="#about">About</a>
 				<a class="nav-item" href="#projects">Projects</a>
 				<a class="nav-item" href="#notes">Lecture Notes</a>
-				<a class="nav-item" href="resume.pdf">Resume</a>
+				<a class="nav-item" href="Resume_Hodges.pdf">Resume</a>
 			</div>
 
 			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
