--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/LastPass.png" alt="Image">
+										<img src="assets/img/kde_plots.jpg" alt="Image">
 									</figure>
 								</div>
 								<div>
-									<a href="RandomPasswordGenerator.html">Random Password Generator</a>
+									<a href="Property_Data.html">Property Data</a>
 									<p>
-										This file shows how to read and write csv files using python.
+										This file explores a couple public datasets on property data in the Asheville area. 
 									</p>
 								</div>
 							</article>
