--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 								<div>
 									<a href="Property_Data.html">Property Data</a>
 									<p>
-										This file explores a couple public datasets on property data in the Asheville area. 
+										This file explores two public datasets on property in the Asheville area. 
 									</p>
 								</div>
 							</article>
