--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/SensorLabImage.png" alt="Image">
+										<img src="assets/img/vehicle.png" alt="Image">
 									</figure>
 								</div>
 								<div>
-									<a href="SensorLabGPSData.html">Sensor Lab Data</a>
+									<a href="VehiclePandas.html">Car Inspections</a>
 									<p>
-										Using an android app to gather gps data from a phone. Sensor's also include light levels, magnetic field strength and sound which could be used for various other projects.
+										Here is a quick notebook taking advantage of pandas pivot tables to find averages and medians of data and plotting the results. 
 									</p>
 								</div>
 							</article>
