--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 							</article>
 						</div>
 					</div>
-					<!-- Project 4 -->
+					<!-- Project 4
 					<div class="column">
 						<div class="box project-text">
 							<article>
@@ -145,7 +145,7 @@
 									</p>
 								</div>
 							</article>
-						</div>
+						</div>-->
 					</div>
 						</div>
 					</div>
